SubBt/force-app/main/default/objects/Email_Template__c/Email_Template__c.object-meta.xml
<CustomObject>
    <label>Email Template</label>
    <nameField>
        <displayFormat>ET-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>