SubBt/force-app/main/default/objects/Email_Template__c/fields/Address_Label__c.field-meta.xml
<CustomField>
    <fullName>Address_Label__c</fullName>
    <label>Address Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>