SubBt/force-app/main/default/objects/Email_Template__c/fields/Allow_LineItems__c.field-meta.xml
<CustomField>
    <fullName>Allow_LineItems__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow LineItems</label>
    <type>Checkbox</type>
</CustomField>